Css touch-ups, still trying to squash the overscroll issues
Css touch-ups, still trying to squash the overscroll issues. On mobile if you overscroll on the right side it makes the page off center :/

--- a/static/styles/styles.css
+++ b/static/styles/styles.css
@@ -82,6 +82,9 @@ html, body {
 	margin-right: 0px;
 	margin-left: 0px;
 
+	overflow-y: scroll !important;
+
+
 	
 
 
@@ -89,7 +92,7 @@ html, body {
 	overflow: auto !important;
 	-webkit-overflow-scrolling: touch;
 
-	overscroll-behavior-x: none;
+	overscroll-behavior: contain !important;
 
   
 
